# plateau-gis-converter

./: Cargo.toml
.github/workflows/: ci.yml
nusamai-citygml/: Cargo.toml
nusamai-citygml/macros/: Cargo.toml
nusamai-citygml/src/: geometry.rs  object.rs  parser.rs  schema.rs  test_bug_54400098_frn.gml  values.rs
nusamai-citygml/tests/: values.rs
nusamai-czml/: Cargo.toml
nusamai-geojson/: Cargo.toml
nusamai-gltf/: Cargo.toml
nusamai-gltf/nusamai-gltf-json/: Cargo.toml
nusamai-gpkg/: Cargo.toml
nusamai-kml/: Cargo.toml
nusamai-plateau/: Cargo.toml
nusamai-plateau/src/: appearance.rs  entity.rs
nusamai-plateau/src/codelist/: resolver.rs
nusamai-plateau/src/models/: building.rs  core.rs  mod.rs  other_construction.rs  transportation.rs  waterbody.rs
nusamai-plateau/src/models/iur/urf/: zone.rs
nusamai-plateau/src/models/iur/uro/: dm.rs  ifc.rs  underground_building.rs
nusamai-plateau/tests/: load_examples.rs
nusamai-projection/: Cargo.toml
nusamai-shapefile/: Cargo.toml
