[package]
edition = "2021"
name = "nusamai-citygml"
version.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "flatgeom/serde", "serde_json"]

[dependencies]
ahash = "0.8.12"
chrono = { version = "0.4.44", features = ["serde"], default-features = false }
flatgeom = "0.0.2"
indexmap = { version = "2.13.0", features = ["serde"] }
log = "0.4.29"
macros = { path = "./macros" }
nusamai-projection = { path = "../nusamai-projection" }
once_cell = "1.21.3"
quick-xml = "0.37.5"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", features = ["indexmap"], optional = true }
thiserror = "2.0.18"
url = { version = "2.5.8", features = ["serde"] }
