[package]
edition = "2021"
name = "nusamai-plateau"
version.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
chrono = { version = "0.4.44", features = ["serde"], default-features = false }
flatgeom = "0.0.2"
hashbrown = { version = "0.16.1", features = ["serde"] }
indexmap = "2.13.0"
log = "0.4.29"
nusamai-citygml = { path = "../nusamai-citygml", features = ["serde"] }
once_cell = "1.21.3"
quick-xml = "0.37.5"
serde = { version = "1.0.228", features = ["derive", "rc"], optional = true }
stretto = "0.8.4"
url = "2.5.8"

[dev-dependencies]
bincode = { version = "2.0.1", default-features = false, features = ["serde", "std"] }
clap = { version = "4.5.60", features = ["derive"] }
lz4_flex = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zstd = { version = "0.13.3", features = ["zdict_builder"] }
